trying to add volume

--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -23,6 +23,8 @@ jobs:
     container:
       # A Docker image with Semgrep installed. Don't change this.
       image: returntocorp/semgrep
+      volumes:
+        - "semgrep-rules:/semgrep-rules"
     # Skip any PR created by dependabot to avoid permission issues
     if: (github.actor != 'dependabot[bot]')
     steps:
@@ -38,4 +40,4 @@ jobs:
           # save it in your GitHub Secrets.
           # SEMGREP_APP_TOKEN: ${{ secrets.SEMGREP_APP_TOKEN }}
           # Option 2: Set hard-coded rulesets, viewable in logs.
-          SEMGREP_RULES: semgrep-rules # more at semgrep.dev/explore
+          SEMGREP_RULES: /semgrep-rules # more at semgrep.dev/explore
