--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -32,7 +32,7 @@ jobs:
       - uses: actions/checkout@v3
 
       # Run the "semgrep ci" command on the command line of the docker image.
-      - run: semgrep --config=/semgrep-rules ci
+      - run: semgrep --config=auto ci
         env:
           # Select rules for your scan with one of these two options.
           # Option 1: Scan with rules set in Semgrep App's rule board
