--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -23,8 +23,6 @@ jobs:
     container:
       # A Docker image with Semgrep installed. Don't change this.
       image: returntocorp/semgrep
-      volumes:
-        - ".semgrep:rules"
     # Skip any PR created by dependabot to avoid permission issues
     if: (github.actor != 'dependabot[bot]')
     steps:
@@ -32,7 +30,7 @@ jobs:
       - uses: actions/checkout@v3
 
       # Run the "semgrep ci" command on the command line of the docker image.
-      - run: semgrep -config=rules ci
+      - run: semgrep ci
         env:
           # Select rules for your scan with one of these two options.
           # Option 1: Scan with rules set in Semgrep App's rule board
@@ -40,4 +38,4 @@ jobs:
           # save it in your GitHub Secrets.
           # SEMGREP_APP_TOKEN: ${{ secrets.SEMGREP_APP_TOKEN }}
           # Option 2: Set hard-coded rulesets, viewable in logs.
-          SEMGREP_RULES: /semgrep-rules # more at semgrep.dev/explore
+          SEMGREP_RULES: semgrep-rules # more at semgrep.dev/explore
