Add some delay for logs, gateway is not finished building

--- a/.github/workflows/api-tests.yml
+++ b/.github/workflows/api-tests.yml
@@ -115,6 +115,7 @@ jobs:
 
     - name: Print compose logs
       run: |
+        sleep 60
         docker-compose -f ci/ci_testing_env.yml logs
       working-directory: tyk-automated-tests
 
