--- a/.github/workflows/sync-automation.yml
+++ b/.github/workflows/sync-automation.yml
@@ -52,7 +52,7 @@ jobs:
           git restore --source master -- .github/workflows/release.yml
           git restore --source master -- .github/workflows/api-tests.yml
           git restore --source master -- .github/dependabot.yml
-          git add -A && git commit -m "[CI]: Syncing CI changes to {{ matrix.branch }}"
+          git add -A && git commit -m "[CI]: Syncing CI changes to ${{ matrix.branch }}"
           git push origin $prbranch
           echo "::set-output name=prbranch::$prbranch"
           echo "::debug::Commit ${{ github.sha }} syncd for ${{matrix.branch}}"
