include pkg directory in goreleaser

--- a/ci/goreleaser/goreleaser.yml
+++ b/ci/goreleaser/goreleaser.yml
@@ -167,6 +167,7 @@ dockers:
     - testdata
     - trace
     - user
+    - pkg
 
 docker_manifests:
   - name_template: tykio/tyk-gateway:{{ .Tag }}
