--- a/.github/workflows/persistent-env-check.yml
+++ b/.github/workflows/persistent-env-check.yml
@@ -7,13 +7,13 @@ env:
   CONTAINER_NAME: "tyk"
   CLUSTER: "kikitest"
   IMAGE: "tyk:v4.0.0"
-  ENV_EXIST: 'true'
+  #ENV_EXIST: 'true'
 
 jobs:
   Check:
     runs-on: ubuntu-latest
     outputs: 
-      env-exist: ${{ steps.set-output-defaults.outputs.env-exist }}
+      #env-exist: ${{ steps.set-output-defaults.outputs.env-exist }}
       container-name: ${{ steps.set-output-defaults.outputs.container-name }}
       cluster: ${{ steps.set-output-defaults.outputs.cluster }}
       service: ${{ steps.set-output-defaults.outputs.service }}
@@ -44,7 +44,7 @@ jobs:
           echo "::set-output name=key::$key"
           echo "::set-output name=region::$region"
 
-      - name: Configure AWS credentials for use
+      - name: Configure AWS credentials for ECR
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ steps.aws-creds.outputs.key }}
@@ -55,10 +55,32 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
 
+      - name: Configure AWS credentials for ECS query
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.GROMIT_AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.GROMIT_AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ steps.aws-creds.outputs.region }}
+
+      - name: Check environment exist
+        id: env-exists
+        run:
+          output=$(aws ecs describe-clusters --clusters ${{ env.CLUSTER }})
+
+          failures=$(echo $output | jq '.failures[0].reason')
+          env-status=$(echo $output | jq '.clusters[0].status')
+          
+          if [[ "${failures}" == "null" ]];then
+            if [[ "$env-status" == "ACTIVE" ]]
+            echo "::set-output name=env-exist::'true'"
+          elif [[ "${failures}" == "MISSING" ]]
+            echo "::set-output name=env-exist::'false'"
+          fi
+
+
       - name: Simulate outputs from the release pipeline
         id: set-output-defaults
         run: |
-          echo "::set-output name=env-exist::${{ env.ENV_EXIST }}"
           echo "::set-output name=container-name::${{ env.CONTAINER_NAME }}"
           echo "::set-output name=cluster::${{ env.CLUSTER }}"
           echo "::set-output name=service::${{ env.SERVICE }}"
