--- a/.github/workflows/persistent-env-check.yml
+++ b/.github/workflows/persistent-env-check.yml
@@ -65,10 +65,9 @@ jobs:
       - name: Check environment exist
         id: env-exists
         run:
-          output=$(aws ecs describe-clusters --clusters ${{ env.CLUSTER }})
-
-          failures="$(echo $output | jq '.failures[0].reason')"
-          env-status="$(echo $output | jq '.clusters[0].status')"
+          output="$(aws ecs describe-clusters --clusters ${{ env.CLUSTER }})"
+          failures="$(echo $output | jq -r '.failures[0].reason')"
+          env-status="$(echo $output | jq -r '.clusters[0].status')"
           
           if [[ "${failures}" == "null" ]];then
             if [[ "$env-status" == "ACTIVE" ]]
