--- a/.github/workflows/persistent-env-check.yml
+++ b/.github/workflows/persistent-env-check.yml
@@ -66,8 +66,9 @@ jobs:
         id: env-exists
         run: |
           output="$(aws ecs describe-clusters --clusters ${{ env.CLUSTER }})"
-          failures="$(echo $output | jq -r '.failures[0].reason')"
-          env-status="$(echo $output | jq -r '.clusters[0].status')"
+          echo "$output"
+          failures="$(echo "$output" | jq -r '.failures[0].reason')"
+          env-status="$(echo "$output" | jq -r '.clusters[0].status')"
           
           if [[ "${failures}" == "null" ]];then
             if [[ "$env-status" == "ACTIVE" ]]
