--- a/.github/workflows/persistent-env-check.yml
+++ b/.github/workflows/persistent-env-check.yml
@@ -72,11 +72,11 @@ jobs:
           
           if [[ "${failures}" == "null" ]];then
             if [[ "$env_status" == "ACTIVE" ]];then
-              echo "::set-output name=env-exist::'true'"
+              echo "::set-output name=env-exist::true"
               echo "true"
             fi
           elif [[ "${failures}" == "MISSING" ]];then
-            echo "::set-output name=env-exist::'false'"
+            echo "::set-output name=env-exist::false"
             echo "false"
           fi
 
