--- a/.github/workflows/persistent-env-check.yml
+++ b/.github/workflows/persistent-env-check.yml
@@ -5,9 +5,8 @@ on:
 env:
   SERVICE: "tyk"
   CONTAINER_NAME: "tyk"
-  CLUSTER: "kikitest"
+  CLUSTER: "kikitest2"
   IMAGE: "tyk:v4.0.0"
-  #ENV_EXIST: 'true'
 
 jobs:
   Check:
@@ -101,6 +100,9 @@ jobs:
       aws_key: ${{ secrets.GROMIT_AWS_ACCESS_KEY_ID }}
       aws_secret: ${{ secrets.GROMIT_AWS_SECRET_ACCESS_KEY }}
       tf_token: ${{ secrets.TF_API_TOKEN }}
+      etcd_pass: ${{ secrets.DEVENV_ETCD_PASS }}
+      docker_user: ${{ secrets.DOCKER_USERNAME }}
+      docker_pass: ${{ secrets.DOCKER_PASSWORD }}
 
   Update-workflow:
     if: ${{ needs.Check.outputs.env-exist == 'true' }}
