--- a/.github/workflows/create-persistent-env.yml
+++ b/.github/workflows/create-persistent-env.yml
@@ -74,7 +74,7 @@ jobs:
           password: ${{ secrets.docker_pass }}
           registry: docker.io
           image: tykio/gromit:v1.4.5-rc1
-          options: -v ${{ github.workspace }}:/scripts -e ETCD_PASS=${{ secrets.etcd_pass }}
+          options: -v ${{ github.workspace }}:/scripts
           run: gromit mutex get master --script /scripts/ci/devenv/create_env.sh
             
 
