--- a/.github/workflows/create-persistent-env.yml
+++ b/.github/workflows/create-persistent-env.yml
@@ -66,7 +66,7 @@ jobs:
           username: ${{ secrets.docker_user }}
           password: ${{ secrets.docker_pass }}
 
-      - uses: addnab/docker-run-action@v3
+      - uses: TykTechnologies/docker-run-action@main
         env:
           ETCD_PASS=${{ secrets.etcd_pass }}
         with:
