comment out docker login inspect volume

--- a/.github/workflows/create-persistent-env.yml
+++ b/.github/workflows/create-persistent-env.yml
@@ -70,12 +70,14 @@ jobs:
         env:
           ETCD_PASS: ${{ secrets.etcd_pass }}
         with:
-          username: ${{ secrets.docker_user }}
-          password: ${{ secrets.docker_pass }}
+          # username: ${{ secrets.docker_user }}
+          # password: ${{ secrets.docker_pass }}
           registry: docker.io
           image: tykio/gromit:v1.4.5-rc1
           options: -v ${{ github.workspace }}:/scripts
-          run: gromit mutex get master --script /scripts/ci/devenv/create_env.sh
+          run: |
+            ls /scripts
+            gromit mutex get master --script /scripts/ci/devenv/create_env.sh
             
 
       # - name: Terraform Init
