--- a/.github/workflows/create-persistent-env.yml
+++ b/.github/workflows/create-persistent-env.yml
@@ -48,7 +48,7 @@ jobs:
           terraform_wrapper: false
 
       - name: Inspect dir
-        run: find /home -name .terraformrc
+        run: find /home/runner/work -name .terraformrc
 
 
 
