--- a/.github/workflows/delete-persistent-env.yml
+++ b/.github/workflows/delete-persistent-env.yml
@@ -1,4 +1,4 @@
-name: Persistent Environment Creation
+name: Persistent Environment Deletion
 on:
   workflow_call:
     inputs:
@@ -66,7 +66,7 @@ jobs:
           username: ${{ secrets.docker_user }}
           password: ${{ secrets.docker_pass }}
 
-      - name: Locking + Terraform apply
+      - name: Locking + Terraform Destroy
         uses: TykTechnologies/docker-run-action@main
         env:
           ETCD_PASS: ${{ secrets.etcd_pass }}
@@ -75,4 +75,4 @@ jobs:
           registry: docker.io
           image: tykio/gromit:v1.4.5-rc2
           options: -v ${{ github.workspace }}:/repo -v /home/runner/.terraformrc:/root/.terraformrc
-          run: gromit mutex get master --script /repo/ci/devenv/create_env.sh -l debug
+          run: gromit mutex get master --script /repo/ci/devenv/destroy_env.sh -l debug
