--- a/.github/workflows/gromit-run.yml
+++ b/.github/workflows/gromit-run.yml
@@ -1,4 +1,4 @@
-name: Persistent Environment Creation
+name: Gromit CLI Run
 on:
   workflow_call:
     inputs:
@@ -12,6 +12,9 @@ on:
         required: false
         type: string
         default: "./ci/terraform/environment"
+      script:
+        required: true
+        type: string        
     secrets:
       aws_key:
         required: true
@@ -75,4 +78,4 @@ jobs:
           registry: docker.io
           image: tykio/gromit:v1.4.5-rc2
           options: -v ${{ github.workspace }}:/repo -v /home/runner/.terraformrc:/root/.terraformrc
-          run: gromit mutex get master --script /repo/ci/devenv/create_env.sh -l debug
+          run: gromit mutex get master --script ${{ inputs.script }} -l debug
