Rename certs package as cert for the Go convention

--- a/ci/goreleaser/goreleaser-el7.yml
+++ b/ci/goreleaser/goreleaser-el7.yml
@@ -136,7 +136,7 @@ dockers:
     - ci/images/plugin-compiler
     - go.mod
     - apidef
-    - certs
+    - cert
     - checkup
     - cli
     - config
