--- a/ci/goreleaser/goreleaser.yml
+++ b/ci/goreleaser/goreleaser.yml
@@ -144,7 +144,7 @@ dockers:
     - ci/images/plugin-compiler
     - go.mod
     - apidef
-    - certs
+    - cert
     - checkup
     - cli
     - config
