--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -168,7 +168,7 @@ jobs:
       - name: Configure AWS credentials for use
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          role-to-assume: arn:aws:iam::754489498669:role/ecr_rw_tyk
+          role-to-assume: arn:aws:iam::046805072452:role/gromit-test
           role-session-name: githubciecr
           aws-region: eu-central-1
 
