--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -8,6 +8,7 @@ on:
 env:
   TYK_DB_REDISHOST: localhost
   TYK_GW_STORAGE_HOST: localhost
+  PYTHON_VERSION: '3.7.15'
 
 jobs:
   test:
@@ -17,6 +18,7 @@ jobs:
       fail-fast: false
       matrix:
         redis-version: [5]
+        python-version: [${{ env.PYTHON_VERSION }}]
         go: [1.16]
 
     steps:
@@ -33,7 +35,7 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
-            python-version: '3.7'
+            python-version: ${{ matrix.python-version }}
 
       - name: Install Dependencies and basic hygiene test
         id: hygiene
