--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -15,10 +15,10 @@ jobs:
     name: Go ${{ matrix.go }} Redis ${{ matrix.redis-version }}
     runs-on: ubuntu-latest
     strategy:
-      fail-fast: false
+      fail-fast: true
       matrix:
         redis-version: [5]
-        python-version: [${{ env.PYTHON_VERSION }}]
+        python-version: ['3.7.15']
         go: [1.16]
 
     steps:
