--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -5,6 +5,8 @@ on: pull_request
 env:
   TYK_DB_REDISHOST: localhost
   TYK_GW_STORAGE_HOST: localhost
+  PYTHON_VERSION: '3.9'
+  PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION: python
 
 jobs:
   test:
@@ -14,6 +16,7 @@ jobs:
       fail-fast: false
       matrix:
         redis-version: [5]
+        python-version: ['3.9']
         go: [1.15]
 
     steps:
@@ -26,9 +29,9 @@ jobs:
           go-version: ${{ matrix.go }}
 
       - name: Setup Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
-            python-version: '3.5'
+            python-version: ${{ matrix.python-version }}
 
       - name: Setup Lua
         run:
