--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -184,9 +184,9 @@ jobs:
       - name: Configure AWS credentials for use
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          aws-access-key-id: ${{ steps.aws-creds.outputs.key }}
-          aws-secret-access-key: ${{ steps.aws-creds.outputs.secret }}
-          aws-region: ${{ steps.aws-creds.outputs.region }}
+          aws-access-key-id: ${{ key }}
+          aws-secret-access-key: ${{ secret }}
+          aws-region: ${{ region }}
 
       - name: Login to Amazon ECR
         id: login-ecr
